syntax = "proto3";
import "modelcommon.proto";

package model;
option go_package="model";


message ClobLine {
        model.Decimal64 size = 1;
        model.Decimal64 price = 2;
	string entryId = 3;
        int32 listingId = 4;
}


message ClobQuote {
    int32 listingId = 1;
    repeated ClobLine bids = 2;
    repeated ClobLine offers = 3; 
    bool streamInterrupted = 4;
    string streamStatusMsg = 5;
    model.Decimal64 lastPrice = 6;
    model.Decimal64 lastQuantity = 7;
    model.Decimal64 tradedVolume = 8;
}


